.metadata/.plugins/org.eclipse.cdt.ui/testakjf.build.log
18:58:41 **** Incremental Build of configuration Debug for project testakjf ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F334x8 -c -I../Core/Inc -I../Drivers/STM32F3xx_HAL_Driver/Inc -I../Drivers/STM32F3xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F3xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:105:30: error: 'GPIO_5' undeclared (first use in this function); did you mean 'GPIOA'?
  105 |    HAL_GPIO_TogglePin(GPIOA, GPIO_5);
      |                              ^~~~~~
      |                              GPIOA
../Core/Src/main.c:105:30: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

18:58:42 Build Failed. 2 errors, 0 warnings. (took 1s.423ms)

